// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should match snapshot 1`] = `
<button
  class="Button__StyledButton-he5aif-0 ctYaMH"
>
  Some text
</button>
`;

exports[`Button should match snapshot in selected state 1`] = `
<button
  class="Button__StyledButton-he5aif-0 ctYaMH"
  selected=""
>
  Some text
</button>
`;
